Refactor code execution count in Google Applications Analysis.ipynb

--- a/Google Applications Analysis.ipynb
+++ b/Google Applications Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -104,56 +104,56 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "234/234 [==============================] - 4s 8ms/step - loss: 33.9182 - mae: 4.5895 - val_loss: 25.8120 - val_mae: 3.9148\n",
+      "234/234 [==============================] - 8s 9ms/step - loss: 34.1085 - mae: 4.5904 - val_loss: 25.4191 - val_mae: 3.8594\n",
       "Epoch 2/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 20.0882 - mae: 3.3935 - val_loss: 19.0302 - val_mae: 3.2975\n",
+      "234/234 [==============================] - 2s 6ms/step - loss: 20.0549 - mae: 3.3895 - val_loss: 18.2654 - val_mae: 3.2586\n",
       "Epoch 3/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 12.2944 - mae: 2.6465 - val_loss: 13.9856 - val_mae: 2.7752\n",
+      "234/234 [==============================] - 2s 6ms/step - loss: 12.0360 - mae: 2.6327 - val_loss: 14.1492 - val_mae: 2.8098\n",
       "Epoch 4/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 7.0564 - mae: 2.0024 - val_loss: 13.5528 - val_mae: 2.7021\n",
+      "234/234 [==============================] - 2s 7ms/step - loss: 7.0197 - mae: 1.9842 - val_loss: 13.9395 - val_mae: 2.7636\n",
       "Epoch 5/20\n",
-      "234/234 [==============================] - 1s 5ms/step - loss: 4.4766 - mae: 1.5814 - val_loss: 13.5960 - val_mae: 2.7033\n",
+      "234/234 [==============================] - 1s 6ms/step - loss: 4.5172 - mae: 1.5733 - val_loss: 14.0774 - val_mae: 2.7712\n",
       "Epoch 6/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 3.4274 - mae: 1.3728 - val_loss: 13.1742 - val_mae: 2.6657\n",
+      "234/234 [==============================] - 1s 6ms/step - loss: 3.4034 - mae: 1.3825 - val_loss: 14.0958 - val_mae: 2.7742\n",
       "Epoch 7/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 2.8586 - mae: 1.2610 - val_loss: 13.0375 - val_mae: 2.6414\n",
+      "234/234 [==============================] - 1s 6ms/step - loss: 2.8562 - mae: 1.2575 - val_loss: 13.8350 - val_mae: 2.7357\n",
       "Epoch 8/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 2.3734 - mae: 1.1456 - val_loss: 12.8972 - val_mae: 2.6135\n",
+      "234/234 [==============================] - 1s 6ms/step - loss: 2.3114 - mae: 1.1305 - val_loss: 13.4650 - val_mae: 2.6853\n",
       "Epoch 9/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 2.0685 - mae: 1.0662 - val_loss: 12.8561 - val_mae: 2.6132\n",
+      "234/234 [==============================] - 1s 6ms/step - loss: 2.1056 - mae: 1.0804 - val_loss: 13.3750 - val_mae: 2.6704\n",
       "Epoch 10/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 1.8463 - mae: 1.0048 - val_loss: 12.8637 - val_mae: 2.6180\n",
+      "234/234 [==============================] - 2s 7ms/step - loss: 1.8477 - mae: 1.0045 - val_loss: 13.1209 - val_mae: 2.6476\n",
       "Epoch 11/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 1.7074 - mae: 0.9626 - val_loss: 12.8157 - val_mae: 2.6130\n",
+      "234/234 [==============================] - 2s 7ms/step - loss: 1.6900 - mae: 0.9600 - val_loss: 13.1427 - val_mae: 2.6391\n",
       "Epoch 12/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 1.5748 - mae: 0.9251 - val_loss: 12.7492 - val_mae: 2.6023\n",
+      "234/234 [==============================] - 2s 7ms/step - loss: 1.5709 - mae: 0.9218 - val_loss: 13.0335 - val_mae: 2.6283\n",
       "Epoch 13/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 1.5057 - mae: 0.9043 - val_loss: 12.7946 - val_mae: 2.6054\n",
+      "234/234 [==============================] - 1s 6ms/step - loss: 1.4880 - mae: 0.8990 - val_loss: 13.1755 - val_mae: 2.6372\n",
       "Epoch 14/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 1.3551 - mae: 0.8548 - val_loss: 12.8125 - val_mae: 2.6004\n",
+      "234/234 [==============================] - 1s 6ms/step - loss: 1.3866 - mae: 0.8687 - val_loss: 13.1883 - val_mae: 2.6367\n",
       "Epoch 15/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 1.3649 - mae: 0.8558 - val_loss: 12.8199 - val_mae: 2.5971\n",
+      "234/234 [==============================] - 1s 6ms/step - loss: 1.3493 - mae: 0.8539 - val_loss: 13.2846 - val_mae: 2.6522\n",
       "Epoch 16/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 1.2753 - mae: 0.8280 - val_loss: 12.9036 - val_mae: 2.6009\n",
+      "234/234 [==============================] - 1s 6ms/step - loss: 1.3240 - mae: 0.8393 - val_loss: 13.5909 - val_mae: 2.6833\n",
       "Epoch 17/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 1.2040 - mae: 0.7968 - val_loss: 12.8157 - val_mae: 2.5852\n",
+      "234/234 [==============================] - 2s 6ms/step - loss: 1.2690 - mae: 0.8314 - val_loss: 13.9744 - val_mae: 2.7312\n",
       "Epoch 18/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 1.1978 - mae: 0.7974 - val_loss: 12.6668 - val_mae: 2.5686\n",
+      "234/234 [==============================] - 2s 6ms/step - loss: 1.1838 - mae: 0.8034 - val_loss: 13.7106 - val_mae: 2.6932\n",
       "Epoch 19/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 1.1271 - mae: 0.7776 - val_loss: 12.7369 - val_mae: 2.5709\n",
+      "234/234 [==============================] - 2s 6ms/step - loss: 1.1716 - mae: 0.7961 - val_loss: 13.5275 - val_mae: 2.6709\n",
       "Epoch 20/20\n",
-      "234/234 [==============================] - 1s 6ms/step - loss: 1.0920 - mae: 0.7629 - val_loss: 12.8077 - val_mae: 2.5831\n",
-      "59/59 [==============================] - 0s 3ms/step - loss: 12.8077 - mae: 2.5831\n",
-      "MAE trên tập kiểm tra: 2.58\n"
+      "234/234 [==============================] - 1s 6ms/step - loss: 1.1526 - mae: 0.7892 - val_loss: 13.7303 - val_mae: 2.6983\n",
+      "59/59 [==============================] - 0s 4ms/step - loss: 13.7303 - mae: 2.6983\n",
+      "MAE trên tập kiểm tra: 2.70\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x200d916fdf0>"
+       "<keras.callbacks.History at 0x21c13e068c0>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
